--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,10 @@
   "dependencies": {
     "axios": "^0.27.2",
     "cors": "^2.8.5",
-    "express": "^4.17.3",
+    "express": "^4.18.1",
     "msnodesqlv8": "^2.4.8",
     "mssql": "^8.1.2",
+    "node": "^17.7.2",
     "nodemon": "^2.0.16"
   }
 }
